# web-browser-playground

./: Cargo.toml  README.md  index.html  index.js  simple.js
examples/: fetch_playground.js  index.js  json_tests.js  person.js  simple.js
src/: main.rs
src/html/: document.rs  script.rs
src/js/: clipboard.rs  console.rs  fetch.rs  json.rs  navigator.rs  node.rs  person.rs  response.rs  utils.rs
