[package]
name = "web-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.142"
# boa_engine = "0.16.0"
boa_engine = { git = "https://github.com/boa-dev/boa", branch = "main"}
# boa_gc = "0.16.0"
boa_gc = { git = "https://github.com/boa-dev/boa", branch = "main"}
gc = { version = "0.4.1", features = ["derive"] }
tap = "1.0.1"
sys-locale = "0.2.0"
num_cpus = "1.14.0"
clipboard = "0.5.0"
wl-clipboard-rs = "0.7.0"
scraper = "0.14.0"
json = "0.12.4"
# cssparser = { git = "https://github.com/servo/rust-cssparser", branch = "master"}
# mozjs = { git = "https://github.com/servo/mozjs", version = "0.14.1"}
